--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,9 +1,10 @@
 .header {
+    height: 10vh;
+    padding: 0 20px;
+    padding-top: 1%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 6px 20px;
-    padding-top: 20px;
     border-bottom: 1px solid #e4e4e4;
   }
   
