--- a/Front/src/pages/Main/Main.css
+++ b/Front/src/pages/Main/Main.css
@@ -1,7 +1,7 @@
 .MainContainer {
     text-align: center;
     margin: 0 auto;
-    padding: 0 230px;
+    padding: 0 18%;
     box-sizing: border-box;
   }
   
@@ -96,7 +96,7 @@
     justify-content: center;
     align-items: center;
     margin-top: auto;
-    margin-bottom: 2%;
+    margin-bottom: 10%;
   }
   
   
