--- a/Front/src/components/css/BestBoard.css
+++ b/Front/src/components/css/BestBoard.css
@@ -21,7 +21,7 @@
     margin-left: 1%;
   }
 
-  .BeatBoardSub {
+  .BestBoardSub {
     font-size: 16px;
     font-family: 'PretendardFont';
     color: #8b8b8b;
@@ -29,10 +29,12 @@
     margin-top: 1%;
   }
   
-  .best-Board-list {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+  .best-board-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 4%;
+    margin-top: 2%;
+    margin-bottom: 10%;
   }
   
   /* .Board-card {
