--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -25,3 +25,18 @@ code {
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'PretendardFont-Light';
+  src: url("./fonts/Pretendard-Light.woff");
+}
+
+@font-face {
+  font-family: 'PretendardFont-Medium';
+  src: url("./fonts/Pretendard-Medium.woff");
+}
+
+@font-face {
+  font-family: 'PretendardFont-Bold';
+  src: url("./fonts/Pretendard-Bold.woff");
+}
