--- a/Front/src/pages/Login/Login.css
+++ b/Front/src/pages/Login/Login.css
@@ -89,17 +89,18 @@
     width: 100%;
     height: 44px;
     background-color: #ace5ec;
+    /* 기본 색상 */
     color: white;
     border: none;
     border-radius: 10px;
     font-size: 16px;
     font-family: 'PretendardFont';
     cursor: pointer;
-  }
-  
-  .login-button:hover {
-    background-color: #00bcd4;
-  }
+    margin-top: 20px;
+    opacity: 0.6;
+    /* 기본 상태는 불투명 */
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+}
 
   .join-button {
     border: none; /* 테두리 제거 */
@@ -112,3 +113,13 @@
     cursor: pointer; /* 마우스 커서를 포인터로 설정 */
   }
   
+  .login-button.active {
+    background-color: #00bcd4;
+    /* 모든 필드가 입력되면 이 색으로 변경 */
+    opacity: 1;
+    /* 불투명도 100% */
+  }
+
+  .login-button:disabled {
+    cursor: not-allowed; /* 비활성화 시 커서 변경 */
+}
