--- a/Front/src/components/css/PlaceBoardItem.css
+++ b/Front/src/components/css/PlaceBoardItem.css
@@ -1,5 +1,5 @@
 .board-item {
-  background-color: #f0f0f081;
+  background-color: #fafafa;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -7,7 +7,12 @@
 
 .board-item-image {
   background-color: #ccc;
-  height: 150px;
+  height: 170px;
+}
+
+.board-item-img {
+  height: 100%;
+  width: 100%;
 }
 
 .board-item-info {
@@ -29,4 +34,41 @@
   font-size: 14px;
   font-family: 'PretendardFont-Light';
   color: #505050;
+}
+
+.board-item-distance,
+.board-item-rating {
+  font-size: 14px;
+  font-family: 'PretendardFont-Light';
+  color: #707070;
+  margin-top: 4px; /* 항목들 사이의 간격 */
+}
+
+.board-item-distance {
+  display: flex;
+  align-items: center;
+}
+
+.board-item-rating {
+  display: flex;
+  align-items: center;
+}
+
+/* 아이템 hover 시 약간의 효과 추가 */
+.board-item:hover {
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+  transition: all 0.2s ease;
+}
+
+/* Link 태그 또는 a 태그의 기본 링크 스타일 제거 */
+.board-item-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* 기본 hover 스타일도 제거 */
+.board-item-link:hover {
+  text-decoration: none;
+  color: inherit;
 }
