내 여행, 장소목록 페이지 버튼

--- a/Front/src/components/css/BestBoard.css
+++ b/Front/src/components/css/BestBoard.css
@@ -35,16 +35,8 @@
     gap: 4%;
     margin-top: 2%;
     margin-bottom: 10%;
+    text-align: left;
   }
-  
-  /* .Board-card {
-    width: 30%;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-   */
 
 
   
