--- a/Front/src/pages/PlaceDetail/PlaceDetail.css
+++ b/Front/src/pages/PlaceDetail/PlaceDetail.css
@@ -127,5 +127,6 @@ hr {
 .kakaoMap {
     margin-top: 2%;
     background-color: rgb(197, 197, 197);
-    height: 200px;
+    height: 400px;
+    width: 100%;
 }
