--- a/Front/src/pages/MyTripDetail/InviteDialog.css
+++ b/Front/src/pages/MyTripDetail/InviteDialog.css
@@ -79,3 +79,27 @@
     font-size: 1.2rem;
     cursor: pointer;
 }
+/* 기존 스타일에 추가 */
+.suggestionsList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    max-height: 200px; /* 최대 높이를 설정 */
+    overflow-y: auto; /* 스크롤을 가능하게 설정 */
+    border: 1px solid #ccc; /* 테두리 추가 */
+    border-radius: 6px;
+    width: 90%; /* 이메일 입력 필드와 맞추기 */
+    background-color: white;
+    position: absolute; /* 이메일 입력란 아래에 위치 */
+    z-index: 1000; /* 추천 목록이 다른 요소 위에 보이도록 */
+    margin-top: 55px;
+}
+
+.suggestionsList li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.suggestionsList li:hover {
+    background-color: #f0f0f0; /* hover 시 배경색 변경 */
+}
