--- a/Front/src/pages/Community/CommunityBoard/CommunityBoard.css
+++ b/Front/src/pages/Community/CommunityBoard/CommunityBoard.css
@@ -1,5 +1,4 @@
 .CommunityBoardContainer {
-    text-align: center;
     margin: 0 auto;
     padding: 0 18%;
     box-sizing: border-box;
@@ -28,4 +27,11 @@
     font-weight: bold;
     background-color: #007bff;
     color: white;
+}
+
+.CommunityBoardGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* 카드 크기 및 그리드 자동 채우기 */
+    gap: 34px; /* 카드 간격 */
+    margin: 4%;
 }
