여행 장소  저장, 나만의 장소 저장

--- a/Front/src/pages/Community/CommunityDetail/CommunityDetail.css
+++ b/Front/src/pages/Community/CommunityDetail/CommunityDetail.css
@@ -176,3 +176,9 @@ hr {
     margin: 4%;
 }
 
+.noCommentsMessage {
+    font-size: 0.96rem;
+    font-family: 'PretendardFont-Medium';
+    color: #484848;
+}
+
