--- a/Front/src/pages/MyTripDetail/MyTripDetail.css
+++ b/Front/src/pages/MyTripDetail/MyTripDetail.css
@@ -133,7 +133,8 @@ hr {
     flex-direction: column; 
     align-items: center;
     width: 100%;
-    gap: 20px;
+    gap: 70px;
+    margin-bottom: 10%;
 }
 
 .modal {
