--- a/Front/src/components/css/Header.css
+++ b/Front/src/components/css/Header.css
@@ -74,3 +74,12 @@
 .login-btn {
   width: 80%;
 }
+
+.admin-text {
+  font-size: 0.86rem;
+  width: 50px;
+  font-family: 'PretendardFont-Medium';
+  border-bottom: 1px solid #ababab;
+  color: #ababab;
+  margin-right: 20px;
+}
