--- a/Front/src/components/css/PlaceBoardItem.css
+++ b/Front/src/components/css/PlaceBoardItem.css
@@ -73,3 +73,15 @@
   text-decoration: none;
   color: inherit;
 }
+.trashIconBox {
+  display: flex;
+  margin-top: 6%;
+}
+
+.trashIcon {
+  margin-left: auto;
+  margin-right: 6%;
+  margin-bottom: 2%;
+  color: rgb(107, 107, 107);
+  font-size: 1rem;
+}
