--- a/Front/src/pages/MyTripDetail/MyTripPlanPlaceItem/MyTripPlanPlaceItem.css
+++ b/Front/src/pages/MyTripDetail/MyTripPlanPlaceItem/MyTripPlanPlaceItem.css
@@ -27,6 +27,12 @@
     font-size: 0.98rem;
 }
 
+.planPlaceItemTime {
+    font-family: 'PretendardFont-Light';
+    font-size: 0.92rem;
+    margin-left: auto;
+}
+
 .planPlaceItemComment {
     font-family: 'PretendardFont-Light';
     font-size: 0.96rem;
