--- a/Front/src/components/css/PlaceBoardItem.css
+++ b/Front/src/components/css/PlaceBoardItem.css
@@ -7,12 +7,19 @@
 
 .board-item-image {
   background-color: #ccc;
-  height: 150px;
+  height: 150px; /* 고정된 높이 설정 */
+  overflow: hidden; /* 넘치는 이미지를 숨김 */
+  display: flex; /* 이미지 중앙 정렬을 위한 flexbox 설정 */
+  justify-content: center;
+  align-items: center;
 }
 
-.board-item-img {
-  height: 100%;
-  width: 100%;
+.placeImg {
+  width: 100%; /* 부모 컨테이너 너비에 맞게 */
+  height: auto; /* 높이는 자동으로 조정 */
+  max-height: 100%; /* 부모 컨테이너 높이를 초과하지 않도록 설정 */
+  object-fit: contain; /* 이미지 전체를 비율 유지하며 보여줌 */
+  border-radius: 8px; /* 둥근 모서리 */
 }
 
 .board-item-info {
