--- a/Front/src/pages/Community/CommunityWrite/CommunityWrite.css
+++ b/Front/src/pages/Community/CommunityWrite/CommunityWrite.css
@@ -24,6 +24,7 @@
 .tripWriteTitleGroup,
 .tripWriteContentGroup,
 .tripWriteDateGroup,
+.tripwWritePlanGroup,
 .tripWriteUploadImageGroup,
 .ScheduleSelectionGroup,
 .thumbnailImageGroup,
@@ -158,4 +159,35 @@
 
 .CommunityCreateBtn:hover {
     background-color: #67c1c7;
+}
+.planButtonGroup {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.planButton {
+    width: 100px;
+    height: 40px;
+    border-radius: 30px;
+    border: 1.5px solid gray; /* 테두리 색상 추가 */
+    color: gray;
+    background-color:#fff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: 'PretendardFont-Medium';
+    font-size: 1.09rem;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.planButton:hover {
+    transform: scale(1.05);
+    background-color: #67c1c7;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+}
+.dayTitle {
+    padding: 1% 2%;
+    width: 92%;
+    margin-left: auto;
 }
