--- a/Front/src/pages/Community/CommunityDetail/CommunityDetail.css
+++ b/Front/src/pages/Community/CommunityDetail/CommunityDetail.css
@@ -62,7 +62,7 @@ hr {
 }
 
 .travelPostAuthor {
-    font-size: 0.74rem;
+    font-size: 0.8rem;
     font-family: 'PretendardFont-Light';
     color: rgb(104, 104, 104);
     margin-left: auto;
@@ -273,4 +273,52 @@ hr {
     transform: scale(1.05);
     background-color: #67c1c7;
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+}
+.dropdowns-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdowns-menu {
+    position: absolute;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 150px;
+}
+
+.dropdowns-menu ul {
+    list-style: none;
+    padding: 6% 0;
+    margin: 0;
+}
+
+.dropdowns-menu ul hr {
+    margin: 6% 4%;
+}
+
+.dropdowns-menu li {
+    cursor: pointer;
+    font-size: 14px;
+    color: #555;
+    text-align: center;
+}
+
+.dropdowns-menu li:hover {
+    background-color: #f1f1f1;
+}
+.dropdowns-container {
+    position: absolute; /* 작성자 위에 고정되도록 설정 */
+    top: 0; /* 상단 고정 */
+    right: 0; /* 오른쪽 정렬 */
+    display: inline-block; /* inline으로 표시 */
+}
+.travelPostHeaderContent {
+    display: flex;
+    flex-direction: column; /* 수직 정렬 */
+    position: relative;
+    margin-bottom: 1rem; /* 아래 간격 추가 */
 }
