--- a/Front/src/pages/Admin/AdminPlaceModify/AdminPlaceModify.css
+++ b/Front/src/pages/Admin/AdminPlaceModify/AdminPlaceModify.css
@@ -57,3 +57,27 @@
     font-size: 1.12rem;
     color: rgb(255, 255, 255);
 }
+.AdminCategoryContainer {
+    margin-bottom: 4%; /* 기존 margin 유지 */
+}
+
+.AdminCategoryTitle {
+    font-family: 'PretendardFont-Light';
+    color: rgb(51, 51, 51);
+    font-size: 1rem;
+    margin-left: 1%;
+    margin-bottom: 0.3%;
+}
+
+.AdminCategorySelect {
+    width: 100%; /* 입력 필드와 동일한 폭 */
+    height: 45px; /* 높이 조정 */
+    border-radius: 10px; /* 둥근 테두리 */
+    border: 1px solid rgb(206, 206, 206); /* 테두리 색상 */
+    padding-left: 2%; /* 텍스트 패딩 */
+    font-family: 'PretendardFont-Light'; /* 폰트 스타일 */
+    font-size: 0.96rem; /* 글자 크기 약간 확대 */
+    background-color: #ffffff; /* 배경색 */
+    transition: all 0.3s ease; /* 부드러운 효과 */
+    cursor: pointer;
+}
